# CompassNode

./: CMakeLists.txt  package.xml
src/: compass_node.cpp  compass_node.cpp~
